@@ -1,4 +1,5 @@
 3.0:
+* segway: added cluster specific max job polling times
 
 2.0.5:
 * segway: fixed bug causing identify to fail with archives of different track numbers
